Fix iOS layout bug: telephone numbers getting <a> defaults

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -123,6 +123,10 @@ body {
 	background-color: #FFF;
 }
 
+a {
+	margin:0; padding:0;
+}
+
 .center-wrap {
 	width: 90%;
 	margin: 0 auto;
@@ -226,6 +230,9 @@ header {
   		top: 0;
   		bottom: 0;
   		right: 0;
+		}
+		ul li a:hover {
+			color: $accent-color;
 		}
 	}
 }
